--- a/index.html
+++ b/index.html
@@ -227,6 +227,10 @@
             </div>
           </div>
         </div>
+        <div class="alert alert-warning" role="alert" id="wrongcodediv">
+          <strong>Disclaimer:</strong> Our AI-Generated results should be used for guidance only.
+          Consult a professional Veterinarian if there are any serious problems with your pet.
+       </div>
       </section>
 
       <div class="popup-align">
